# QwenASR

./: .gitignore  .release-please-manifest.json  04-ralph-tasks.md  05-test-plan.md  BENCHMARK_COMPARISON.md  CHANGELOG.md  Cargo.toml  RALPH_STATE.md  README.md  codex-program.md  fable-ideas.md  ggml-idea.md  profile_n95.ps1  profile_simulated_n95.ps1  report.md  speed-improvement-experiment-2.md  unchecked-ideas.md
bench/: README.md  benchmark-all.sh  render_benchmark_report.py  run.sh  run_experiment.sh
bench/results-fable/baseline-f1/: audio_offline.json  audio_segmented.json  audio_streaming.json  summary.json
bench/results-fable/f1-prefix-kv-reuse/: audio_offline.json  audio_segmented.json  audio_streaming.json  summary.json
bench/results-fable/f13-bnns-bf16-probe/: audio_offline.json  audio_segmented.json  audio_streaming.json  summary.json
crates/qwen-asr/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/qwen-asr-cli/: CHANGELOG.md  Cargo.toml
crates/qwen-asr-cli/src/: main.rs
crates/qwen-asr-gui/: Cargo.toml
crates/qwen-asr-gui/src/: app.rs  logger.rs  main.rs  params.rs  recorder.rs  seh.rs  sync_ext.rs  worker.rs
docs/: README.md
docs/benchmarks/: README.md  comparison.md  regenerate.sh  results.md
docs/optimizations/: 2026-07-02-avx2-kernel-methodology.md  optimization-matrix-evaluation.md  overview.md  overview.zh.md
docs/plans/: 2026-07-02-avx2-kernel-optimization.md
docs/research/: README.md  experiments.md  failed-optimizations-backup-paths.md  ledger.md  programs.md
librispeech-wer-bench/: README.md
(+40 files in other folders)
